# This file is part of cjdk.
# Copyright 2022 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools>=43",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "cjdk"
dynamic = ["version"]
description = "Auto-download JDK or JRE and run Java apps from Python or CLI"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["Java", "JDK", "JRE", "JVM"]
authors = [
    {name = "Mark A. Tsuchida"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Java",
    "Topic :: Software Development",
]

dependencies = [
    "click >= 8.0",
    "progressbar2 >= 4.0",
    "requests >= 2.24",
]

[project.optional-dependencies]
testing = [
    "flask >= 2.0",
    "pytest >= 7.0",
    "werkzeug >= 2.0",
]

[project.urls]
Documentation = "https://cachedjdk.github.io/cjdk/latest"
Repository = "https://github.com/cachedjdk/cjdk"

[project.scripts]
cjdk = "cjdk.__main__:main"

[tool.setuptools_scm]
write_to = "src/cjdk/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
# Disable rules that failed when we switched to ruff. To be cleaned up.
ignore = ["B006", "B007", "B011", "B017", "E501"]
