# This file is part of cjdk.
# Copyright 2022-25 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cjdk"
dynamic = ["version"]
description = "Auto-download JDK or JRE and run Java apps from Python or CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["Java", "JDK", "JRE", "JVM"]
authors = [
    {name = "Mark A. Tsuchida"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Java",
    "Topic :: Software Development",
]

dependencies = [
    "click >= 8.0",
    "progressbar2 >= 4.0",
    "requests >= 2.24",
    "typing-extensions>=4.15.0",
]

[project.urls]
Documentation = "https://cachedjdk.github.io/cjdk/latest"
Repository = "https://github.com/cachedjdk/cjdk"

[project.scripts]
cjdk = "cjdk.__main__:main"

[dependency-groups]
test = [
    "flask >= 2.0",
    "pytest >= 7.0",
    "werkzeug >= 2.0",
]
dev = [
    {include-group = "test"},
    "ty >= 0.0.9",
]
docs = [
    "jgo >= 1.0",
    "jupyter-book >= 0.13, < 2.0",
    "jupyterlab >= 3.4",
    "jupytext >= 1.13",
    "sphinxcontrib-programoutput >= 0.17",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/cjdk/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
# Disable rules that failed when we switched to ruff. To be cleaned up.
ignore = ["B006", "B007", "B011", "B017", "E501"]

[tool.uv]
# hatch-vcs compatibility
cache-keys = [{file = "pyproject.toml"}, {git = {commit = true, tags = true}}]
